--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
 		"typescript": "^4.9.5",
-		"web-vitals": "^2.1.4"
+		"sass": "^1.58.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -24,7 +24,9 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint ./src/**",
-		"lint:fix": "eslint ./src/** --fix"
+		"lint:fix": "eslint ./src/** --fix",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -50,6 +52,7 @@
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"prettier": "^2.8.6"
+		"prettier": "^2.8.6",
+		"gh-pages": "^5.0.0"
 	}
 }
