--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
-		"plugin:prettier/recommended"
+		"plugin:prettier/recommended",
 	],
 	"rules": {
 		"@typescript-eslint/ban-types": "off",
@@ -23,12 +23,13 @@
 			"error",
 			{
 				"singleQuote": true,
+				"jsxSingleQuote": true,
 				"useTabs": true,
 				"semi": true,
 				"trailingComma": "all",
 				"bracketSpacing": true,
 				"printWidth": 100,
-				"endOfLine": "auto"
+				"endOfLine": "auto",
 			}
 		]
 	}
