--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-	"singleQuote": true,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
 	"trailingComma": "all",
 	"useTabs": true,
-	"semi": true,
+	"semi": false,
 	"bracketSpacing": true,
 	"printWidth": 100,
 	"endOfLine": "auto"
