--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
 		"@types/node": "^17.0.45",
 		"@types/react": "^18.2.4",
 		"@types/react-dom": "^18.2.3",
+		"nanoid": "^4.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"react-scripts": "5.0.1",
-		"typescript": "^4.9.5",
-		"sass": "^1.58.3"
+		"sass": "^1.58.3",
+		"typescript": "^4.9.5"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -52,10 +53,10 @@
 		"eslint": "^8.36.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"prettier": "^2.8.6",
-		"gh-pages": "^5.0.0"
+		"gh-pages": "^5.0.0",
+		"prettier": "^2.8.6"
 	},
-		"prettier": {
+	"prettier": {
 		"singleQuote": true,
 		"jsxSingleQuote": true
 	}
