--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "tech-solutions-task",
 	"version": "0.1.0",
+	"homepage": "https://antonoshurek.github.io/tech-solutions-task/",
 	"private": true,
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.5",
