--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "tech-solutions-task",
+	 "description": "Zadanie rekrutacyjne dla firmy SP Tech Solutions",
 	"version": "1.0.0",
 	"homepage": "https://antonoshurek.github.io/tech-solutions-task/",
 	"private": true,
