--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
 	"name": "tech-solutions-task",
-	 "description": "Zadanie rekrutacyjne dla firmy SP Tech Solutions",
+ 	"description": "Zadanie rekrutacyjne dla firmy SP Tech Solutions",
 	"version": "1.0.0",
 	"homepage": "https://antonoshurek.github.io/tech-solutions-task/",
-	"private": true,
+	"repository": {
+    "type": "git",
+    "url": "git+https://github.com/AntonOshurek/tech-solutions-task.git"
+  },
+	"bugs": {
+    "url": "https://github.com/AntonOshurek/tech-solutions-task/issues",
+    "email": "oshurekweb@gmail.com"
+  },
+	"author": "Anton Oshurek",
+	"private": false,
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.5",
 		"@testing-library/jest-dom": "^5.16.5",
